fixing weird gaps in schedule

--- a/main.css
+++ b/main.css
@@ -329,6 +329,7 @@ a:hover {
   width: 50%;
   display: grid; 
   grid-template-columns: repeat(4, 1f);
+  text-align: left; 
 }
 
 .time{
